@@ -30,6 +30,9 @@ import java.util.UUID;
 import java.util.concurrent.Callable;
 import java.util.stream.Collectors;
 
+import io.qameta.allure.Description;
+import io.qameta.allure.Feature;
+import io.qameta.allure.Story;
 import org.eclipse.hawkbit.dmf.amqp.api.EventTopic;
 import org.eclipse.hawkbit.dmf.amqp.api.MessageHeaderKey;
 import org.eclipse.hawkbit.dmf.json.model.DmfActionRequest;
@@ -80,25 +83,24 @@ import org.junit.jupiter.params.provider.EnumSource;
 import org.mockito.Mockito;
 import org.springframework.amqp.core.Message;
 
-import io.qameta.allure.Description;
-import io.qameta.allure.Feature;
-import io.qameta.allure.Story;
-
 @Feature("Component Tests - Device Management Federation API")
 @Story("Amqp Message Dispatcher Service")
 public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpServiceIntegrationTest {
+
     private static final String TARGET_PREFIX = "Dmf_disp_";
 
     @Test
     @Description("Verify that a distribution assignment send a download and install message.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
             @Expect(type = TargetAssignDistributionSetEvent.class, count = 1),
             @Expect(type = ActionCreatedEvent.class, count = 1),
             @Expect(type = DistributionSetCreatedEvent.class, count = 1),
             @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
             @Expect(type = DistributionSetUpdatedEvent.class, count = 1), // implicit lock
             @Expect(type = SoftwareModuleUpdatedEvent.class, count = 9), // implicit lock
-            @Expect(type = TargetUpdatedEvent.class, count = 1), @Expect(type = TargetPollEvent.class, count = 1) })
+            @Expect(type = TargetUpdatedEvent.class, count = 1), 
+            @Expect(type = TargetPollEvent.class, count = 1) })
     public void sendDownloadAndInstallStatus() {
         final String controllerId = TARGET_PREFIX + "sendDownloadAndInstallStatus";
         registerTargetAndAssignDistributionSet(controllerId);
@@ -109,14 +111,16 @@ public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpSer
 
     @Test
     @Description("Verify that a distribution assignment sends a download message with window configured but before maintenance window start time.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
             @Expect(type = TargetAssignDistributionSetEvent.class, count = 1),
             @Expect(type = ActionCreatedEvent.class, count = 1),
             @Expect(type = DistributionSetCreatedEvent.class, count = 1),
             @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
             @Expect(type = DistributionSetUpdatedEvent.class, count = 1), // implicit lock
             @Expect(type = SoftwareModuleUpdatedEvent.class, count = 9), // implicit lock
-            @Expect(type = TargetUpdatedEvent.class, count = 1), @Expect(type = TargetPollEvent.class, count = 1) })
+            @Expect(type = TargetUpdatedEvent.class, count = 1), 
+            @Expect(type = TargetPollEvent.class, count = 1) })
     public void sendDownloadStatusBeforeMaintenanceWindowStartTime() {
         final String controllerId = TARGET_PREFIX + "sendDownloadStatusBeforeWindowStartTime";
 
@@ -132,15 +136,17 @@ public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpSer
 
     @Test
     @Description("Verify that a distribution assignment sends a download and install message with window configured and during maintenance window start time.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
             @Expect(type = TargetAssignDistributionSetEvent.class, count = 1),
             @Expect(type = ActionCreatedEvent.class, count = 1),
             @Expect(type = DistributionSetCreatedEvent.class, count = 1),
             @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
             @Expect(type = DistributionSetUpdatedEvent.class, count = 1), // implicit lock
             @Expect(type = SoftwareModuleUpdatedEvent.class, count = 9), // implicit lock
-            @Expect(type = TargetUpdatedEvent.class, count = 1), @Expect(type = TargetPollEvent.class, count = 1) })
-    public void     sendDownloadAndInstallStatusMessageDuringMaintenanceWindow() {
+            @Expect(type = TargetUpdatedEvent.class, count = 1), 
+            @Expect(type = TargetPollEvent.class, count = 1) })
+    public void sendDownloadAndInstallStatusMessageDuringMaintenanceWindow() {
         final String controllerId = TARGET_PREFIX + "sendDAndIStatusMessageDuringWindow";
 
         registerAndAssertTargetWithExistingTenant(controllerId);
@@ -155,15 +161,18 @@ public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpSer
 
     @Test
     @Description("Verify that a distribution assignment multiple times send cancel and assign events with right softwaremodules")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
             @Expect(type = TargetAssignDistributionSetEvent.class, count = 2),
             @Expect(type = CancelTargetAssignmentEvent.class, count = 1),
-            @Expect(type = ActionCreatedEvent.class, count = 2), @Expect(type = ActionUpdatedEvent.class, count = 2),
+            @Expect(type = ActionCreatedEvent.class, count = 2), 
+            @Expect(type = ActionUpdatedEvent.class, count = 2),
             @Expect(type = DistributionSetCreatedEvent.class, count = 2),
             @Expect(type = SoftwareModuleCreatedEvent.class, count = 6),
             @Expect(type = DistributionSetUpdatedEvent.class, count = 2), // implicit lock
             @Expect(type = SoftwareModuleUpdatedEvent.class, count = 18), // implicit lock
-            @Expect(type = TargetUpdatedEvent.class, count = 2), @Expect(type = TargetPollEvent.class, count = 3) })
+            @Expect(type = TargetUpdatedEvent.class, count = 2), 
+            @Expect(type = TargetPollEvent.class, count = 3) })
     public void assignDistributionSetMultipleTimes() {
         final String controllerId = TARGET_PREFIX + "assignDistributionSetMultipleTimes";
 
@@ -198,16 +207,19 @@ public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpSer
 
     @Test
     @Description("If multi assignment is enabled multi-action messages are sent.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
             @Expect(type = MultiActionAssignEvent.class, count = 2),
             @Expect(type = TargetAssignDistributionSetEvent.class, count = 0),
             @Expect(type = CancelTargetAssignmentEvent.class, count = 0),
-            @Expect(type = ActionCreatedEvent.class, count = 2), @Expect(type = ActionUpdatedEvent.class, count = 0),
+            @Expect(type = ActionCreatedEvent.class, count = 2), 
+            @Expect(type = ActionUpdatedEvent.class, count = 0),
             @Expect(type = DistributionSetCreatedEvent.class, count = 2),
             @Expect(type = SoftwareModuleCreatedEvent.class, count = 6),
             @Expect(type = DistributionSetUpdatedEvent.class, count = 2), // implicit lock
             @Expect(type = SoftwareModuleUpdatedEvent.class, count = 6), // implicit lock
-            @Expect(type = TargetUpdatedEvent.class, count = 2), @Expect(type = TargetPollEvent.class, count = 1),
+            @Expect(type = TargetUpdatedEvent.class, count = 2), 
+            @Expect(type = TargetPollEvent.class, count = 1),
             @Expect(type = TenantConfigurationCreatedEvent.class, count = 1) })
     public void assignMultipleDsInMultiAssignMode() {
         enableMultiAssignments();
@@ -242,7 +254,7 @@ public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpSer
                 .setActionType(ActionType.DOWNLOAD_ONLY).setWeight(weight1).build()).getAssignedEntity().get(0).getId();
         final Long cancelActionId = makeAssignment(
                 DeploymentManagement.deploymentRequest(controllerId, ds.getId()).setWeight(DEFAULT_TEST_WEIGHT).build())
-                        .getAssignedEntity().get(0).getId();
+                .getAssignedEntity().get(0).getId();
         // make sure the latest message in the queue is the one triggered by the
         // cancellation
         waitUntilEventMessagesAreDispatchedToTarget(EventTopic.DOWNLOAD_AND_INSTALL, EventTopic.MULTI_ACTION,
@@ -274,27 +286,22 @@ public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpSer
                 controllerId);
     }
 
-    private List<DmfMultiActionElement> getLatestMultiActionMessages(final String expectedControllerId) {
-        final Message multiactionMessage = replyToListener.getLatestEventMessage(EventTopic.MULTI_ACTION);
-        assertThat(multiactionMessage.getMessageProperties().getHeaders().get(MessageHeaderKey.THING_ID))
-                .isEqualTo(expectedControllerId);
-        return ((DmfMultiActionRequest) getDmfClient().getMessageConverter().fromMessage(multiactionMessage))
-                .getElements();
-    }
-
     @Test
     @Description("Handle cancelation process of an action in multi assignment mode.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
             @Expect(type = MultiActionCancelEvent.class, count = 1),
             @Expect(type = MultiActionAssignEvent.class, count = 2),
             @Expect(type = TargetAssignDistributionSetEvent.class, count = 0),
             @Expect(type = CancelTargetAssignmentEvent.class, count = 0),
-            @Expect(type = ActionCreatedEvent.class, count = 2), @Expect(type = ActionUpdatedEvent.class, count = 2),
+            @Expect(type = ActionCreatedEvent.class, count = 2), 
+            @Expect(type = ActionUpdatedEvent.class, count = 2),
             @Expect(type = DistributionSetCreatedEvent.class, count = 2),
             @Expect(type = SoftwareModuleCreatedEvent.class, count = 6),
             @Expect(type = DistributionSetUpdatedEvent.class, count = 2), // implicit lock
             @Expect(type = SoftwareModuleUpdatedEvent.class, count = 6), // implicit lock
-            @Expect(type = TargetUpdatedEvent.class, count = 2), @Expect(type = TargetPollEvent.class, count = 1),
+            @Expect(type = TargetUpdatedEvent.class, count = 2), 
+            @Expect(type = TargetPollEvent.class, count = 1),
             @Expect(type = TenantConfigurationCreatedEvent.class, count = 1) })
     public void cancelActionInMultiAssignMode() {
         enableMultiAssignments();
@@ -319,17 +326,20 @@ public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpSer
 
     @Test
     @Description("Handle finishing an action in multi assignment mode.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
             @Expect(type = MultiActionAssignEvent.class, count = 2),
             @Expect(type = TargetAttributesRequestedEvent.class, count = 1),
             @Expect(type = TargetAssignDistributionSetEvent.class, count = 0),
             @Expect(type = CancelTargetAssignmentEvent.class, count = 0),
-            @Expect(type = ActionCreatedEvent.class, count = 2), @Expect(type = ActionUpdatedEvent.class, count = 1),
+            @Expect(type = ActionCreatedEvent.class, count = 2), 
+            @Expect(type = ActionUpdatedEvent.class, count = 1),
             @Expect(type = DistributionSetCreatedEvent.class, count = 2),
             @Expect(type = SoftwareModuleCreatedEvent.class, count = 6),
             @Expect(type = DistributionSetUpdatedEvent.class, count = 2), // implicit lock
             @Expect(type = SoftwareModuleUpdatedEvent.class, count = 6), // implicit lock
-            @Expect(type = TargetUpdatedEvent.class, count = 3), @Expect(type = TargetPollEvent.class, count = 1),
+            @Expect(type = TargetUpdatedEvent.class, count = 3), 
+            @Expect(type = TargetPollEvent.class, count = 1),
             @Expect(type = TenantConfigurationCreatedEvent.class, count = 1) })
     public void finishActionInMultiAssignMode() {
         enableMultiAssignments();
@@ -349,16 +359,19 @@ public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpSer
 
     @Test
     @Description("If multi assignment is enabled assigning a DS multiple times creates a new action every time.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
             @Expect(type = MultiActionAssignEvent.class, count = 2),
             @Expect(type = TargetAssignDistributionSetEvent.class, count = 0),
             @Expect(type = CancelTargetAssignmentEvent.class, count = 0),
-            @Expect(type = ActionCreatedEvent.class, count = 2), @Expect(type = ActionUpdatedEvent.class, count = 0),
+            @Expect(type = ActionCreatedEvent.class, count = 2), 
+            @Expect(type = ActionUpdatedEvent.class, count = 0),
             @Expect(type = DistributionSetCreatedEvent.class, count = 1),
             @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
             @Expect(type = DistributionSetUpdatedEvent.class, count = 1), // implicit lock
             @Expect(type = SoftwareModuleUpdatedEvent.class, count = 3), // implicit lock
-            @Expect(type = TargetUpdatedEvent.class, count = 2), @Expect(type = TargetPollEvent.class, count = 1),
+            @Expect(type = TargetUpdatedEvent.class, count = 2), 
+            @Expect(type = TargetPollEvent.class, count = 1),
             @Expect(type = TenantConfigurationCreatedEvent.class, count = 1) })
     public void assignDsMultipleTimesInMultiAssignMode() {
         enableMultiAssignments();
@@ -376,37 +389,23 @@ public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpSer
         assertLatestMultiActionMessage(controllerId, Arrays.asList(action1Install, action2Install));
     }
 
-    private void updateActionViaDmfClient(final String controllerId, final long actionId,
-            final DmfActionStatus status) {
-        createAndSendActionStatusUpdateMessage(controllerId, actionId, status);
-    }
-
-    private Long assignNewDsToTarget(final String controllerId) {
-        return assignNewDsToTarget(controllerId, null);
-    }
-
-    private Long assignNewDsToTarget(final String controllerId, final Integer weight) {
-        final DistributionSet ds = testdataFactory.createDistributionSet();
-        final Long actionId = getFirstAssignedActionId(
-                assignDistributionSet(ds.getId(), Collections.singletonList(controllerId), ActionType.FORCED,
-                        RepositoryModelConstants.NO_FORCE_TIME, weight));
-        waitUntilTargetHasStatus(controllerId, TargetUpdateStatus.PENDING);
-        return actionId;
-    }
-
     @Test
     @Description("If multi assignment is enabled multiple rollouts with the same DS lead to multiple actions.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
             @Expect(type = MultiActionAssignEvent.class, count = 2),
             @Expect(type = TargetAssignDistributionSetEvent.class, count = 0),
             @Expect(type = CancelTargetAssignmentEvent.class, count = 0),
-            @Expect(type = ActionCreatedEvent.class, count = 2), @Expect(type = ActionUpdatedEvent.class, count = 2),
+            @Expect(type = ActionCreatedEvent.class, count = 2), 
+            @Expect(type = ActionUpdatedEvent.class, count = 2),
             @Expect(type = DistributionSetCreatedEvent.class, count = 1),
             @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
             @Expect(type = DistributionSetUpdatedEvent.class, count = 1), // implicit lock
             @Expect(type = SoftwareModuleUpdatedEvent.class, count = 3), // implicit lock
-            @Expect(type = TargetUpdatedEvent.class, count = 1), @Expect(type = TargetPollEvent.class, count = 1),
-            @Expect(type = RolloutCreatedEvent.class, count = 2), @Expect(type = RolloutUpdatedEvent.class, count = 6),
+            @Expect(type = TargetUpdatedEvent.class, count = 1), 
+            @Expect(type = TargetPollEvent.class, count = 1),
+            @Expect(type = RolloutCreatedEvent.class, count = 2), 
+            @Expect(type = RolloutUpdatedEvent.class, count = 6),
             @Expect(type = RolloutGroupCreatedEvent.class, count = 2),
             @Expect(type = RolloutGroupUpdatedEvent.class, count = 4),
             @Expect(type = TenantConfigurationCreatedEvent.class, count = 1) })
@@ -430,16 +429,20 @@ public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpSer
 
     @Test
     @Description("If multi assignment is enabled finishing one rollout does not affect other rollouts of the target.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
             @Expect(type = MultiActionAssignEvent.class, count = 3),
-            @Expect(type = ActionCreatedEvent.class, count = 3), @Expect(type = ActionUpdatedEvent.class, count = 5),
+            @Expect(type = ActionCreatedEvent.class, count = 3), 
+            @Expect(type = ActionUpdatedEvent.class, count = 5),
             @Expect(type = DistributionSetCreatedEvent.class, count = 2),
             @Expect(type = SoftwareModuleCreatedEvent.class, count = 6),
             @Expect(type = DistributionSetUpdatedEvent.class, count = 2), // implicit lock
             @Expect(type = SoftwareModuleUpdatedEvent.class, count = 6), // implicit lock
-            @Expect(type = TargetUpdatedEvent.class, count = 5), @Expect(type = TargetPollEvent.class, count = 1),
+            @Expect(type = TargetUpdatedEvent.class, count = 5), 
+            @Expect(type = TargetPollEvent.class, count = 1),
             @Expect(type = TargetAttributesRequestedEvent.class, count = 2),
-            @Expect(type = RolloutCreatedEvent.class, count = 3), @Expect(type = RolloutUpdatedEvent.class, count = 9),
+            @Expect(type = RolloutCreatedEvent.class, count = 3), 
+            @Expect(type = RolloutUpdatedEvent.class, count = 9),
             @Expect(type = RolloutGroupCreatedEvent.class, count = 3),
             @Expect(type = RolloutGroupUpdatedEvent.class, count = 6),
             @Expect(type = TenantConfigurationCreatedEvent.class, count = 1) })
@@ -462,8 +465,9 @@ public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpSer
         assertLatestMultiActionMessageContainsInstallMessages(controllerId, Arrays.asList(smIds1, smIds2, smIds1));
 
         final List<Long> installActions = getLatestMultiActionMessageActions(controllerId).stream()
-                .filter(entry -> entry.getValue().equals(EventTopic.DOWNLOAD_AND_INSTALL)).map(Entry::getKey)
-                .collect(Collectors.toList());
+                .filter(entry -> entry.getValue().equals(EventTopic.DOWNLOAD_AND_INSTALL))
+                .map(Entry::getKey)
+                .toList();
 
         updateActionViaDmfClient(controllerId, installActions.get(0), DmfActionStatus.FINISHED);
         waitUntilEventMessagesAreDispatchedToTarget(EventTopic.REQUEST_ATTRIBUTES_UPDATE, EventTopic.MULTI_ACTION);
@@ -474,29 +478,20 @@ public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpSer
         assertLatestMultiActionMessageContainsInstallMessages(controllerId, Collections.singletonList(smIds1));
     }
 
-    private Set<Long> getSoftwareModuleIds(final DistributionSet ds) {
-        return ds.getModules().stream().map(SoftwareModule::getId).collect(Collectors.toSet());
-    }
-
-    private Rollout createAndStartRollout(final DistributionSet ds, final String filterQuery, final Integer weight) {
-        final Rollout rollout = testdataFactory.createRolloutByVariables(UUID.randomUUID().toString(), "", 1,
-                filterQuery, ds, "50", "5", ActionType.FORCED, weight, false);
-        rolloutManagement.start(rollout.getId());
-        rolloutHandler.handleAll();
-        return rollout;
-    }
-
     @Test
     @Description("Verify that a cancel assignment send a cancel message.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
             @Expect(type = TargetAssignDistributionSetEvent.class, count = 1),
             @Expect(type = CancelTargetAssignmentEvent.class, count = 1),
-            @Expect(type = ActionUpdatedEvent.class, count = 1), @Expect(type = ActionCreatedEvent.class, count = 1),
+            @Expect(type = ActionUpdatedEvent.class, count = 1), 
+            @Expect(type = ActionCreatedEvent.class, count = 1),
             @Expect(type = DistributionSetCreatedEvent.class, count = 1),
             @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
             @Expect(type = DistributionSetUpdatedEvent.class, count = 1), // implicit lock
             @Expect(type = SoftwareModuleUpdatedEvent.class, count = 9), // implicit lock
-            @Expect(type = TargetUpdatedEvent.class, count = 1), @Expect(type = TargetPollEvent.class, count = 2) })
+            @Expect(type = TargetUpdatedEvent.class, count = 1), 
+            @Expect(type = TargetPollEvent.class, count = 2) })
     public void sendCancelStatus() {
         final String controllerId = TARGET_PREFIX + "sendCancelStatus";
 
@@ -509,8 +504,10 @@ public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpSer
 
     @Test
     @Description("Verify that when a target is deleted a target delete message is send.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
-            @Expect(type = TargetPollEvent.class, count = 1), @Expect(type = TargetDeletedEvent.class, count = 1) })
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
+            @Expect(type = TargetPollEvent.class, count = 1), 
+            @Expect(type = TargetDeletedEvent.class, count = 1) })
     public void sendDeleteMessage() {
         final String controllerId = TARGET_PREFIX + "sendDeleteMessage";
 
@@ -521,9 +518,11 @@ public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpSer
 
     @Test
     @Description("Verify that attribute update is requested after device successfully closed software update.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
             @Expect(type = TargetAssignDistributionSetEvent.class, count = 2),
-            @Expect(type = ActionUpdatedEvent.class, count = 2), @Expect(type = ActionCreatedEvent.class, count = 2),
+            @Expect(type = ActionUpdatedEvent.class, count = 2), 
+            @Expect(type = ActionCreatedEvent.class, count = 2),
             @Expect(type = DistributionSetCreatedEvent.class, count = 2),
             @Expect(type = SoftwareModuleCreatedEvent.class, count = 6),
             @Expect(type = DistributionSetUpdatedEvent.class, count = 2), // implicit lock
@@ -548,14 +547,16 @@ public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpSer
 
     @Test
     @Description("Tests the download_only assignment: asserts correct dmf Message topic, and assigned DS")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
             @Expect(type = TargetAssignDistributionSetEvent.class, count = 1),
             @Expect(type = ActionCreatedEvent.class, count = 1),
             @Expect(type = DistributionSetCreatedEvent.class, count = 1),
             @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
             @Expect(type = DistributionSetUpdatedEvent.class, count = 1), // implicit lock
             @Expect(type = SoftwareModuleUpdatedEvent.class, count = 9), // implicit lock
-            @Expect(type = TargetUpdatedEvent.class, count = 1), @Expect(type = TargetPollEvent.class, count = 1) })
+            @Expect(type = TargetUpdatedEvent.class, count = 1), 
+            @Expect(type = TargetPollEvent.class, count = 1) })
     public void downloadOnlyAssignmentSendsDownloadMessageTopic() {
         final String controllerId = TARGET_PREFIX + "registerTargets_1";
         final DistributionSet distributionSet = createTargetAndDistributionSetAndAssign(controllerId, DOWNLOAD_ONLY);
@@ -575,6 +576,173 @@ public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpSer
         // verify the DS was assigned to the Target
         final DistributionSet assignedDistributionSet = ((JpaTarget) target.get()).getAssignedDistributionSet();
         assertThat(assignedDistributionSet.getId()).isEqualTo(distributionSet.getId());
+    }
+
+    @Test
+    @Description("Verify payload of batch assignment download and install message.")
+    public void assertBatchAssignmentsDownloadAndInstall() {
+        assertBatchAssignmentsMessagePayload(BATCH_DOWNLOAD_AND_INSTALL);
+    }
+
+    @Test
+    @Description("Verify payload of batch assignments download only message.")
+    public void assertBatchAssignmentsDownloadOnly() {
+        assertBatchAssignmentsMessagePayload(BATCH_DOWNLOAD);
+    }
+
+    protected void assertDmfBatchDownloadAndUpdateRequest(final DmfBatchDownloadAndUpdateRequest request,
+            final Set<SoftwareModule> softwareModules,
+            final List<String> controllerIds) {
+        assertSoftwareModules(softwareModules, request.getSoftwareModules());
+
+        final List<Object> tokens = controllerIds.stream().map(controllerId -> {
+            final Optional<Target> target = controllerManagement.getByControllerId(controllerId);
+            assertThat(target).isPresent();
+            return target.get().getSecurityToken();
+        }).collect(Collectors.toList());
+
+        final List<DmfTarget> requestTargets = request.getTargets();
+
+        assertThat(requestTargets).hasSameSizeAs(controllerIds);
+        requestTargets.forEach(requestTarget -> {
+            assertThat(requestTarget).isNotNull();
+            assertThat(tokens.contains(requestTarget.getTargetSecurityToken()));
+        });
+    }
+
+    protected void assertEventMessageNotPresent(final EventTopic eventTopic) {
+        assertThat(replyToListener.getLatestEventMessage(eventTopic)).isNull();
+    }
+
+    @Test
+    @Description("Verify that batch and multi-assignments can't be activated at the same time.")
+    void assertBatchAndMultiAssignmentsNotCompatible() {
+        enableBatchAssignments();
+        assertThatExceptionOfType(TenantConfigurationValueChangeNotAllowedException.class)
+                .isThrownBy(() -> enableMultiAssignments());
+        disableBatchAssignments();
+
+        enableMultiAssignments();
+        assertThatExceptionOfType(TenantConfigurationValueChangeNotAllowedException.class)
+                .isThrownBy(() -> enableBatchAssignments());
+    }
+
+    @ParameterizedTest
+    @EnumSource(names = { "BATCH_DOWNLOAD_AND_INSTALL", "BATCH_DOWNLOAD" })
+    @Description("Verify payload of batch assignments.")
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 3),
+            @Expect(type = TargetAssignDistributionSetEvent.class, count = 1),
+            @Expect(type = ActionCreatedEvent.class, count = 3), 
+            @Expect(type = ActionUpdatedEvent.class, count = 0),
+            @Expect(type = DistributionSetCreatedEvent.class, count = 1),
+            @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
+            @Expect(type = DistributionSetUpdatedEvent.class, count = 1), // implicit lock
+            @Expect(type = SoftwareModuleUpdatedEvent.class, count = 9), // implicit lock
+            @Expect(type = TargetUpdatedEvent.class, count = 3), 
+            @Expect(type = TargetPollEvent.class, count = 3),
+            @Expect(type = TenantConfigurationCreatedEvent.class, count = 1) })
+    void assertBatchAssignmentsMessagePayload(final EventTopic topic) {
+        enableBatchAssignments();
+
+        final List<String> targets = Arrays.asList("batchCtrlID1", "batchCtrlID2", "batchCtrlID3");
+        for (int i = 0; i < targets.size(); i++) {
+            registerAndAssertTargetWithExistingTenant(targets.get(i), i + 1);
+        }
+
+        final DistributionSet ds = testdataFactory.createDistributionSet();
+        testdataFactory.addSoftwareModuleMetadata(ds);
+
+        assignDistributionSet(ds.getId(), targets, topic == BATCH_DOWNLOAD ? DOWNLOAD_ONLY : FORCED);
+
+        waitUntilEventMessagesAreDispatchedToTarget(topic);
+
+        final Message message = replyToListener.getLatestEventMessage(topic);
+        final Map<String, Object> headers = message.getMessageProperties().getHeaders();
+        assertThat(headers).containsEntry("type", EVENT.toString());
+        assertThat(headers).containsEntry("topic", topic.toString());
+
+        final DmfBatchDownloadAndUpdateRequest batchRequest = (DmfBatchDownloadAndUpdateRequest) getDmfClient()
+                .getMessageConverter().fromMessage(message);
+
+        assertThat(batchRequest).isExactlyInstanceOf(DmfBatchDownloadAndUpdateRequest.class);
+        assertDmfBatchDownloadAndUpdateRequest(batchRequest, ds.getModules(), targets);
+    }
+
+    @Test
+    @Description("Verify that a distribution assignment send a confirm message.")
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
+            @Expect(type = TargetAssignDistributionSetEvent.class, count = 1),
+            @Expect(type = ActionCreatedEvent.class, count = 1),
+            @Expect(type = DistributionSetCreatedEvent.class, count = 1),
+            @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
+            @Expect(type = DistributionSetUpdatedEvent.class, count = 1), // implicit lock
+            @Expect(type = SoftwareModuleUpdatedEvent.class, count = 9), // implicit lock
+            @Expect(type = TargetUpdatedEvent.class, count = 1),
+            @Expect(type = TargetPollEvent.class, count = 1),
+            @Expect(type = TenantConfigurationCreatedEvent.class, count = 1) })
+    void sendConfirmStatus() {
+        final String controllerId = TARGET_PREFIX + "sendConfirmStatus";
+        enableConfirmationFlow();
+        registerTargetAndAssignDistributionSet(controllerId);
+
+        waitUntilTargetHasStatus(controllerId, TargetUpdateStatus.PENDING);
+        assertConfirmMessage(getDistributionSet().getModules(), controllerId);
+        assertEventMessageNotPresent(EventTopic.DOWNLOAD_AND_INSTALL);
+    }
+
+    private static Set<Long> getSmIds(final DmfDownloadAndUpdateRequest request) {
+        return request.getSoftwareModules().stream().map(DmfSoftwareModule::getModuleId).collect(Collectors.toSet());
+    }
+
+    private static List<DmfDownloadAndUpdateRequest> getDownloadAndUpdateRequests(final DmfMultiActionRequest request) {
+        return request.getElements().stream()
+                .filter(AmqpMessageDispatcherServiceIntegrationTest::isDownloadAndUpdateRequest)
+                .map(multiAction -> (DmfDownloadAndUpdateRequest) multiAction.getAction()).collect(Collectors.toList());
+    }
+
+    private static boolean isDownloadAndUpdateRequest(final DmfMultiActionElement multiActionElement) {
+        return multiActionElement.getTopic().equals(EventTopic.DOWNLOAD)
+                || multiActionElement.getTopic().equals(EventTopic.DOWNLOAD_AND_INSTALL);
+    }
+
+    private List<DmfMultiActionElement> getLatestMultiActionMessages(final String expectedControllerId) {
+        final Message multiactionMessage = replyToListener.getLatestEventMessage(EventTopic.MULTI_ACTION);
+        assertThat(multiactionMessage.getMessageProperties().getHeaders().get(MessageHeaderKey.THING_ID))
+                .isEqualTo(expectedControllerId);
+        return ((DmfMultiActionRequest) getDmfClient().getMessageConverter().fromMessage(multiactionMessage))
+                .getElements();
+    }
+
+    private void updateActionViaDmfClient(final String controllerId, final long actionId,
+            final DmfActionStatus status) {
+        createAndSendActionStatusUpdateMessage(controllerId, actionId, status);
+    }
+
+    private Long assignNewDsToTarget(final String controllerId) {
+        return assignNewDsToTarget(controllerId, null);
+    }
+
+    private Long assignNewDsToTarget(final String controllerId, final Integer weight) {
+        final DistributionSet ds = testdataFactory.createDistributionSet();
+        final Long actionId = getFirstAssignedActionId(
+                assignDistributionSet(ds.getId(), Collections.singletonList(controllerId), ActionType.FORCED,
+                        RepositoryModelConstants.NO_FORCE_TIME, weight));
+        waitUntilTargetHasStatus(controllerId, TargetUpdateStatus.PENDING);
+        return actionId;
+    }
+
+    private Set<Long> getSoftwareModuleIds(final DistributionSet ds) {
+        return ds.getModules().stream().map(SoftwareModule::getId).collect(Collectors.toSet());
+    }
+
+    private Rollout createAndStartRollout(final DistributionSet ds, final String filterQuery, final Integer weight) {
+        final Rollout rollout = testdataFactory.createRolloutByVariables(UUID.randomUUID().toString(), "", 1,
+                filterQuery, ds, "50", "5", ActionType.FORCED, weight, false);
+        rolloutManagement.start(rollout.getId());
+        rolloutHandler.handleAll();
+        return rollout;
     }
 
     private void waitUntilTargetHasStatus(final String controllerId, final TargetUpdateStatus status) {
@@ -613,130 +781,5 @@ public class AmqpMessageDispatcherServiceIntegrationTest extends AbstractAmqpSer
         return multiActionRequest.stream()
                 .map(request -> new SimpleEntry<>(request.getAction().getActionId(), request.getTopic()))
                 .collect(Collectors.toList());
-    }
-
-    private static Set<Long> getSmIds(final DmfDownloadAndUpdateRequest request) {
-        return request.getSoftwareModules().stream().map(DmfSoftwareModule::getModuleId).collect(Collectors.toSet());
-    }
-
-    private static List<DmfDownloadAndUpdateRequest> getDownloadAndUpdateRequests(final DmfMultiActionRequest request) {
-        return request.getElements().stream()
-                .filter(AmqpMessageDispatcherServiceIntegrationTest::isDownloadAndUpdateRequest)
-                .map(multiAction -> (DmfDownloadAndUpdateRequest) multiAction.getAction()).collect(Collectors.toList());
-    }
-
-    private static boolean isDownloadAndUpdateRequest(final DmfMultiActionElement multiActionElement) {
-        return multiActionElement.getTopic().equals(EventTopic.DOWNLOAD)
-                || multiActionElement.getTopic().equals(EventTopic.DOWNLOAD_AND_INSTALL);
-    }
-
-    @Test
-    @Description("Verify payload of batch assignment download and install message.")
-    public void assertBatchAssignmentsDownloadAndInstall() {
-        assertBatchAssignmentsMessagePayload(BATCH_DOWNLOAD_AND_INSTALL);
-    }
-
-    @Test
-    @Description("Verify payload of batch assignments download only message.")
-    public void assertBatchAssignmentsDownloadOnly() {
-        assertBatchAssignmentsMessagePayload(BATCH_DOWNLOAD);
-    }
-
-    @Test
-    @Description("Verify that batch and multi-assignments can't be activated at the same time.")
-    void assertBatchAndMultiAssignmentsNotCompatible() {
-        enableBatchAssignments();
-        assertThatExceptionOfType(TenantConfigurationValueChangeNotAllowedException.class)
-                .isThrownBy(() -> enableMultiAssignments());
-        disableBatchAssignments();
-
-        enableMultiAssignments();
-        assertThatExceptionOfType(TenantConfigurationValueChangeNotAllowedException.class)
-                .isThrownBy(() -> enableBatchAssignments());
-    }
-
-    @ParameterizedTest
-    @EnumSource(names = { "BATCH_DOWNLOAD_AND_INSTALL", "BATCH_DOWNLOAD" })
-    @Description("Verify payload of batch assignments.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 3),
-            @Expect(type = TargetAssignDistributionSetEvent.class, count = 1),
-            @Expect(type = ActionCreatedEvent.class, count = 3), @Expect(type = ActionUpdatedEvent.class, count = 0),
-            @Expect(type = DistributionSetCreatedEvent.class, count = 1),
-            @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
-            @Expect(type = DistributionSetUpdatedEvent.class, count = 1), // implicit lock
-            @Expect(type = SoftwareModuleUpdatedEvent.class, count = 9), // implicit lock
-            @Expect(type = TargetUpdatedEvent.class, count = 3), @Expect(type = TargetPollEvent.class, count = 3),
-            @Expect(type = TenantConfigurationCreatedEvent.class, count = 1) })
-    void assertBatchAssignmentsMessagePayload(final EventTopic topic) {
-        enableBatchAssignments();
-
-        final List<String> targets = Arrays.asList("batchCtrlID1", "batchCtrlID2", "batchCtrlID3");
-        for (int i = 0; i < targets.size(); i++) {
-            registerAndAssertTargetWithExistingTenant(targets.get(i), i+1);
-        }
-
-        final DistributionSet ds = testdataFactory.createDistributionSet();
-        testdataFactory.addSoftwareModuleMetadata(ds);
-
-        assignDistributionSet(ds.getId(), targets, topic == BATCH_DOWNLOAD?DOWNLOAD_ONLY:FORCED);
-
-        waitUntilEventMessagesAreDispatchedToTarget(topic);
-
-        final Message message = replyToListener.getLatestEventMessage(topic);
-        final Map<String, Object> headers = message.getMessageProperties().getHeaders();
-        assertThat(headers).containsEntry("type", EVENT.toString());
-        assertThat(headers).containsEntry("topic",topic.toString());
-
-        final DmfBatchDownloadAndUpdateRequest batchRequest = (DmfBatchDownloadAndUpdateRequest) getDmfClient()
-                .getMessageConverter().fromMessage(message);
-
-        assertThat(batchRequest).isExactlyInstanceOf(DmfBatchDownloadAndUpdateRequest.class);
-        assertDmfBatchDownloadAndUpdateRequest(batchRequest, ds.getModules(), targets);
-    }
-
-    protected void assertDmfBatchDownloadAndUpdateRequest(final DmfBatchDownloadAndUpdateRequest request,
-                                                     final Set<SoftwareModule> softwareModules,
-                                                     final List<String> controllerIds) {
-        assertSoftwareModules(softwareModules, request.getSoftwareModules());
-
-        final List<Object> tokens = controllerIds.stream().map(controllerId -> {
-            final Optional<Target> target = controllerManagement.getByControllerId(controllerId);
-            assertThat(target).isPresent();
-            return target.get().getSecurityToken();
-        }).collect(Collectors.toList());
-
-
-        final List<DmfTarget> requestTargets = request.getTargets();
-
-        assertThat(requestTargets).hasSameSizeAs(controllerIds);
-        requestTargets.forEach(requestTarget -> {
-                    assertThat(requestTarget).isNotNull();
-                    assertThat(tokens.contains(requestTarget.getTargetSecurityToken()));
-                });
-    }
-
-    @Test
-    @Description("Verify that a distribution assignment send a confirm message.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
-            @Expect(type = TargetAssignDistributionSetEvent.class, count = 1),
-            @Expect(type = ActionCreatedEvent.class, count = 1),
-            @Expect(type = DistributionSetCreatedEvent.class, count = 1),
-            @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
-            @Expect(type = DistributionSetUpdatedEvent.class, count = 1), // implicit lock
-            @Expect(type = SoftwareModuleUpdatedEvent.class, count = 9), // implicit lock
-            @Expect(type = TargetUpdatedEvent.class, count = 1),
-            @Expect(type = TargetPollEvent.class, count = 1),
-            @Expect(type = TenantConfigurationCreatedEvent.class, count = 1) })
-    void sendConfirmStatus() {
-        final String controllerId = TARGET_PREFIX + "sendConfirmStatus";
-        enableConfirmationFlow();
-        registerTargetAndAssignDistributionSet(controllerId);
-
-        waitUntilTargetHasStatus(controllerId, TargetUpdateStatus.PENDING);
-        assertConfirmMessage(getDistributionSet().getModules(), controllerId);
-        assertEventMessageNotPresent(EventTopic.DOWNLOAD_AND_INSTALL);
-    }
-    protected void assertEventMessageNotPresent(final EventTopic eventTopic) {
-        assertThat(replyToListener.getLatestEventMessage(eventTopic)).isNull();
     }
 }
