@@ -30,15 +30,18 @@ import java.util.stream.Stream;
 
 import jakarta.validation.ConstraintViolationException;
 
+import io.qameta.allure.Description;
+import io.qameta.allure.Feature;
+import io.qameta.allure.Story;
 import org.assertj.core.api.Assertions;
 import org.eclipse.hawkbit.repository.ActionStatusFields;
 import org.eclipse.hawkbit.repository.DeploymentManagement;
+import org.eclipse.hawkbit.repository.event.remote.CancelTargetAssignmentEvent;
 import org.eclipse.hawkbit.repository.event.remote.MultiActionAssignEvent;
 import org.eclipse.hawkbit.repository.event.remote.MultiActionCancelEvent;
 import org.eclipse.hawkbit.repository.event.remote.TargetAssignDistributionSetEvent;
 import org.eclipse.hawkbit.repository.event.remote.entity.ActionCreatedEvent;
 import org.eclipse.hawkbit.repository.event.remote.entity.ActionUpdatedEvent;
-import org.eclipse.hawkbit.repository.event.remote.CancelTargetAssignmentEvent;
 import org.eclipse.hawkbit.repository.event.remote.entity.DistributionSetCreatedEvent;
 import org.eclipse.hawkbit.repository.event.remote.entity.DistributionSetUpdatedEvent;
 import org.eclipse.hawkbit.repository.event.remote.entity.SoftwareModuleCreatedEvent;
@@ -92,14 +95,8 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Slice;
 import org.springframework.data.domain.Sort.Direction;
 
-import io.qameta.allure.Description;
-import io.qameta.allure.Feature;
-import io.qameta.allure.Story;
-
 /**
- * Test class testing the functionality of triggering a deployment of
- * {@link DistributionSet}s to {@link Target}s.
- *
+ * Test class testing the functionality of triggering a deployment of {@link DistributionSet}s to {@link Target}s.
  */
 @Feature("Component Tests - Repository")
 @Story("Deployment Management")
@@ -109,8 +106,46 @@ class DeploymentManagementTest extends AbstractJpaIntegrationTest {
     private static final boolean STATE_INACTIVE = false;
 
     @Test
-    @Description("Verifies that management get access react as specified on calls for non existing entities by means "
-            + "of Optional not present.")
+    @Description("Tests that an exception is thrown when a target is assigned to an incomplete distribution set")
+    public void verifyAssignTargetsToIncompleteDistribution() {
+        final DistributionSet distributionSet = testdataFactory.createIncompleteDistributionSet();
+        final Target target = testdataFactory.createTarget();
+
+        assertThatExceptionOfType(IncompleteDistributionSetException.class)
+                .as("Incomplete distributionSet should throw an exception")
+                .isThrownBy(() -> assignDistributionSet(distributionSet, target));
+
+    }
+
+    @Test
+    @Description("Tests that an exception is thrown when a target is assigned to an invalidated distribution set")
+    public void verifyAssignTargetsToInvalidDistribution() {
+        final DistributionSet distributionSet = testdataFactory.createAndInvalidateDistributionSet();
+        final Target target = testdataFactory.createTarget();
+
+        assertThatExceptionOfType(InvalidDistributionSetException.class)
+                .as("Invalid distributionSet should throw an exception")
+                .isThrownBy(() -> assignDistributionSet(distributionSet, target));
+
+    }
+
+    protected List<DeploymentRequest> createAssignmentRequests(final Collection<DistributionSet> distributionSets,
+            final Collection<Target> targets, final int weight) {
+        return createAssignmentRequests(distributionSets, targets, weight, false);
+    }
+
+    protected List<DeploymentRequest> createAssignmentRequests(final Collection<DistributionSet> distributionSets,
+            final Collection<Target> targets, final int weight, final boolean confirmationRequired) {
+        final List<DeploymentRequest> deploymentRequests = new ArrayList<>();
+        distributionSets.forEach(ds -> targets.forEach(target -> deploymentRequests
+                .add(DeploymentManagement.deploymentRequest(target.getControllerId(), ds.getId()).setWeight(weight)
+                        .setConfirmationRequired(confirmationRequired).build())));
+        return deploymentRequests;
+    }
+
+    @Test
+    @Description("Verifies that management get access react as specified on calls for non existing entities by means " +
+            "of Optional not present.")
     @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 0) })
     void nonExistingEntityAccessReturnsNotPresent() {
         assertThat(deploymentManagement.findAction(1234L)).isNotPresent();
@@ -118,8 +153,8 @@ class DeploymentManagementTest extends AbstractJpaIntegrationTest {
     }
 
     @Test
-    @Description("Verifies that management queries react as specified on calls for non existing entities "
-            + " by means of throwing EntityNotFoundException.")
+    @Description("Verifies that management queries react as specified on calls for non existing entities " +
+            " by means of throwing EntityNotFoundException.")
     @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1) })
     void entityQueriesReferringToNotExistingEntitiesThrowsException() {
         final Target target = testdataFactory.createTarget();
@@ -146,7 +181,7 @@ class DeploymentManagementTest extends AbstractJpaIntegrationTest {
     @Description("Test verifies that the repistory retrieves the action including all defined (lazy) details.")
     void findActionWithLazyDetails() {
         final DistributionSet testDs = testdataFactory.createDistributionSet("TestDs", "1.0",
-                new ArrayList<DistributionSetTag>());
+                new ArrayList<>());
         final List<Target> testTarget = testdataFactory.createTargets(1);
         // one action with one action status is generated
         final Long actionId = getFirstAssignedActionId(assignDistributionSet(testDs, testTarget));
@@ -163,7 +198,7 @@ class DeploymentManagementTest extends AbstractJpaIntegrationTest {
     @Description("Test verifies that actions of a target are found by using id-based search.")
     void findActionByTargetId() {
         final DistributionSet testDs = testdataFactory.createDistributionSet("TestDs", "1.0",
-                new ArrayList<DistributionSetTag>());
+                new ArrayList<>());
         final List<Target> testTarget = testdataFactory.createTargets(1);
         // one action with one action status is generated
         final Long actionId = getFirstAssignedActionId(assignDistributionSet(testDs, testTarget));
@@ -247,8 +282,7 @@ class DeploymentManagementTest extends AbstractJpaIntegrationTest {
         final String expectedMsg = actionStatusWithMessage.getMessages().get(0);
 
         // act
-        final Page<String> messages = deploymentManagement.findMessagesByActionStatusId(PAGE,
-                actionStatusWithMessage.getId());
+        final Page<String> messages = deploymentManagement.findMessagesByActionStatusId(PAGE, actionStatusWithMessage.getId());
 
         assertThat(actionStates.getTotalElements()).as("Two action-states in total").isEqualTo(2L);
         assertThat(messages.getContent().get(0)).as("Message of action-status").isEqualTo(expectedMsg);
@@ -273,7 +307,8 @@ class DeploymentManagementTest extends AbstractJpaIntegrationTest {
 
     @Test
     @Description("Test verifies that an assignment with automatic cancelation works correctly even if the update is split into multiple partitions on the database.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 20),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 20),
             @Expect(type = TargetUpdatedEvent.class, count = 40),
             @Expect(type = TargetAssignDistributionSetEvent.class, count = 2),
             @Expect(type = ActionCreatedEvent.class, count = 40),
@@ -282,7 +317,8 @@ class DeploymentManagementTest extends AbstractJpaIntegrationTest {
             @Expect(type = DistributionSetCreatedEvent.class, count = 2),
             @Expect(type = SoftwareModuleCreatedEvent.class, count = 6),
             @Expect(type = DistributionSetUpdatedEvent.class, count = 2), // implicit lock
-            @Expect(type = SoftwareModuleUpdatedEvent.class, count = 6) }) // implicit lock })
+            @Expect(type = SoftwareModuleUpdatedEvent.class, count = 6) })
+        // implicit lock })
     void multiAssigmentHistoryOverMultiplePagesResultsInTwoActiveAction() {
 
         final DistributionSet cancelDs = testdataFactory.createDistributionSet("Canceled DS", "1.0",
@@ -453,29 +489,13 @@ class DeploymentManagementTest extends AbstractJpaIntegrationTest {
                 .isThrownBy(() -> deploymentManagement.forceQuitAction(assigningAction.getId()));
     }
 
-    private JpaAction assignSet(final Target target, final DistributionSet ds) {
-        assignDistributionSet(ds.getId(), target.getControllerId());
-        implicitLock(ds);
-        assertThat(targetManagement.getByControllerID(target.getControllerId()).get().getUpdateStatus())
-                .as("wrong update status").isEqualTo(TargetUpdateStatus.PENDING);
-        assertThat(deploymentManagement.getAssignedDistributionSet(target.getControllerId())).as("wrong assigned ds")
-                .contains(ds);
-        final JpaAction action = actionRepository
-                .findAll(
-                        (root, query, cb) ->
-                                cb.and(
-                                        cb.equal(root.get(JpaAction_.target).get(JpaTarget_.id), target.getId()),
-                                        cb.equal(root.get(JpaAction_.distributionSet).get(JpaDistributionSet_.id), ds.getId())),
-                        PAGE).getContent().get(0);
-        assertThat(action).as("action should not be null").isNotNull();
-        return action;
-    }
-
     @Test
     @Description("Simple offline deployment of a distribution set to a list of targets. Verifies that offline assigment "
             + "is correctly executed for targets that do not have a running update already. Those are ignored.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 20),
-            @Expect(type = TargetUpdatedEvent.class, count = 20), @Expect(type = ActionCreatedEvent.class, count = 20),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 20),
+            @Expect(type = TargetUpdatedEvent.class, count = 20), 
+            @Expect(type = ActionCreatedEvent.class, count = 20),
             @Expect(type = DistributionSetCreatedEvent.class, count = 2),
             @Expect(type = SoftwareModuleCreatedEvent.class, count = 6),
             @Expect(type = DistributionSetUpdatedEvent.class, count = 2), // implicit lock
@@ -518,8 +538,10 @@ class DeploymentManagementTest extends AbstractJpaIntegrationTest {
 
     @Test
     @Description("Offline assign multiple DSs to a single Target in multiassignment mode.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
-            @Expect(type = TargetUpdatedEvent.class, count = 4), @Expect(type = ActionCreatedEvent.class, count = 4),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
+            @Expect(type = TargetUpdatedEvent.class, count = 4), 
+            @Expect(type = ActionCreatedEvent.class, count = 4),
             @Expect(type = DistributionSetCreatedEvent.class, count = 4),
             @Expect(type = SoftwareModuleCreatedEvent.class, count = 12),
             @Expect(type = DistributionSetUpdatedEvent.class, count = 4), // implicit lock
@@ -541,8 +563,12 @@ class DeploymentManagementTest extends AbstractJpaIntegrationTest {
         assertThat(getResultingActionCount(assignmentResults)).isEqualTo(4);
         targetIds.forEach(controllerId -> {
             final List<Long> assignedDsIds = deploymentManagement.findActionsByTarget(controllerId, PAGE).stream()
-                    .peek(a -> assertThat(a.getInitiatedBy()).as("Actions should be initiated by current user")
-                            .isEqualTo(tenantAware.getCurrentUsername()))
+                    .map(a -> {
+                        // don't use peek since it is by documentation mainly for debugging and could be skipped in some cases
+                        assertThat(a.getInitiatedBy()).as("Actions should be initiated by current user")
+                                .isEqualTo(tenantAware.getCurrentUsername());
+                        return a;
+                    })
                     .map(action -> action.getDistributionSet().getId()).collect(Collectors.toList());
             assertThat(assignedDsIds).containsExactlyInAnyOrderElementsOf(dsIds);
         });
@@ -550,8 +576,10 @@ class DeploymentManagementTest extends AbstractJpaIntegrationTest {
 
     @Test
     @Description("Verifies that if an account is set to action autoclose running actions in case of a new assigned set get closed and set to CANCELED.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 10),
-            @Expect(type = TargetUpdatedEvent.class, count = 20), @Expect(type = ActionCreatedEvent.class, count = 20),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 10),
+            @Expect(type = TargetUpdatedEvent.class, count = 20), 
+            @Expect(type = ActionCreatedEvent.class, count = 20),
             @Expect(type = ActionUpdatedEvent.class, count = 10),
             @Expect(type = DistributionSetCreatedEvent.class, count = 2),
             @Expect(type = SoftwareModuleCreatedEvent.class, count = 6),
@@ -591,8 +619,10 @@ class DeploymentManagementTest extends AbstractJpaIntegrationTest {
 
     @Test
     @Description("If multi-assignment is enabled, verify that the previous Distribution Set assignment is not canceled when a new one is assigned.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 10),
-            @Expect(type = TargetUpdatedEvent.class, count = 20), @Expect(type = ActionCreatedEvent.class, count = 20),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 10),
+            @Expect(type = TargetUpdatedEvent.class, count = 20), 
+            @Expect(type = ActionCreatedEvent.class, count = 20),
             @Expect(type = DistributionSetCreatedEvent.class, count = 2),
             @Expect(type = SoftwareModuleCreatedEvent.class, count = 6),
             @Expect(type = DistributionSetUpdatedEvent.class, count = 2), // implicit lock
@@ -620,24 +650,12 @@ class DeploymentManagementTest extends AbstractJpaIntegrationTest {
         assertDsExclusivelyAssignedToTargets(targets, ds1.getId(), STATE_ACTIVE, RUNNING);
     }
 
-    private void assertDsExclusivelyAssignedToTargets(final List<Target> targets, final long dsId, final boolean active,
-            final Status status) {
-        final List<Action> assignment = findActionsByDistributionSet(PAGE, dsId).getContent();
-        final String currentUsername = tenantAware.getCurrentUsername();
-
-        assertThat(assignment).hasSize(10).allMatch(action -> action.isActive() == active)
-                .as("Is assigned to DS " + dsId).allMatch(action -> action.getDistributionSet().getId().equals(dsId))
-                .as("State is " + status).allMatch(action -> action.getStatus() == status)
-                .as("Initiated by " + currentUsername).allMatch(a -> a.getInitiatedBy().equals(currentUsername));
-        final long[] targetIds = targets.stream().mapToLong(Target::getId).toArray();
-        assertThat(targetIds).as("All targets represented in assignment").containsExactlyInAnyOrder(
-                assignment.stream().mapToLong(action -> action.getTarget().getId()).toArray());
-    }
-
     @Test
     @Description("Assign multiple DSs to a single Target in one request in multiassignment mode.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
-            @Expect(type = TargetUpdatedEvent.class, count = 4), @Expect(type = ActionCreatedEvent.class, count = 4),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
+            @Expect(type = TargetUpdatedEvent.class, count = 4), 
+            @Expect(type = ActionCreatedEvent.class, count = 4),
             @Expect(type = DistributionSetCreatedEvent.class, count = 4),
             @Expect(type = SoftwareModuleCreatedEvent.class, count = 12),
             @Expect(type = DistributionSetUpdatedEvent.class, count = 4), // implicit lock
@@ -659,8 +677,12 @@ class DeploymentManagementTest extends AbstractJpaIntegrationTest {
         targets.forEach(target -> {
             final List<Long> assignedDsIds = deploymentManagement.findActionsByTarget(target.getControllerId(), PAGE)
                     .stream()
-                    .peek(a -> assertThat(a.getInitiatedBy()).as("Initiated by current user")
-                            .isEqualTo(tenantAware.getCurrentUsername()))
+                    .map(a -> {
+                        // don't use peek since it is by documentation mainly for debugging and could be skipped in some cases
+                        assertThat(a.getInitiatedBy()).as("Initiated by current user")
+                                .isEqualTo(tenantAware.getCurrentUsername());
+                        return a;
+                    })
                     .map(action -> action.getDistributionSet().getId()).collect(Collectors.toList());
             assertThat(assignedDsIds).containsExactlyInAnyOrderElementsOf(dsIds);
         });
@@ -668,8 +690,10 @@ class DeploymentManagementTest extends AbstractJpaIntegrationTest {
 
     @Test
     @Description("Assign multiple DSs to single Target in one request in multiAssignment mode and cancel each created action afterwards.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
-            @Expect(type = TargetUpdatedEvent.class, count = 4), @Expect(type = ActionCreatedEvent.class, count = 4),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
+            @Expect(type = TargetUpdatedEvent.class, count = 4), 
+            @Expect(type = ActionCreatedEvent.class, count = 4),
             @Expect(type = DistributionSetCreatedEvent.class, count = 4),
             @Expect(type = SoftwareModuleCreatedEvent.class, count = 12),
             @Expect(type = DistributionSetUpdatedEvent.class, count = 4), // implicit lock
@@ -702,20 +726,6 @@ class DeploymentManagementTest extends AbstractJpaIntegrationTest {
         });
     }
 
-    protected List<DeploymentRequest> createAssignmentRequests(final Collection<DistributionSet> distributionSets,
-            final Collection<Target> targets, final int weight) {
-        return createAssignmentRequests(distributionSets, targets, weight, false);
-    }
-
-    protected List<DeploymentRequest> createAssignmentRequests(final Collection<DistributionSet> distributionSets,
-            final Collection<Target> targets, final int weight, final boolean confirmationRequired) {
-        final List<DeploymentRequest> deploymentRequests = new ArrayList<>();
-        distributionSets.forEach(ds -> targets.forEach(target -> deploymentRequests
-                .add(DeploymentManagement.deploymentRequest(target.getControllerId(), ds.getId()).setWeight(weight)
-                        .setConfirmationRequired(confirmationRequired).build())));
-        return deploymentRequests;
-    }
-
     @Test
     @Description("A Request resulting in multiple assignments to a single target is only allowed when multiassignment is enabled.")
     void multipleAssignmentsToTargetOnlyAllowedInMultiAssignMode() {
@@ -744,7 +754,7 @@ class DeploymentManagementTest extends AbstractJpaIntegrationTest {
         final DistributionSet createdDs = testdataFactory.createDistributionSet();
 
         final List<String> knownTargetIds = new ArrayList<>();
-        knownTargetIds.add( "1");
+        knownTargetIds.add("1");
         knownTargetIds.add("2");
         testdataFactory.createTargets(knownTargetIds.toArray(new String[0]));
 
@@ -901,25 +911,17 @@ class DeploymentManagementTest extends AbstractJpaIntegrationTest {
         });
     }
 
-    private List<DistributionSetAssignmentResult> assignDistributionSetToTargets(final DistributionSet distributionSet,
-            final Iterable<String> targetIds, final boolean confirmationRequired) {
-        final List<DeploymentRequest> deploymentRequests = new ArrayList<>();
-        for (final String controllerId : targetIds) {
-            deploymentRequests.add(new DeploymentRequest(controllerId, distributionSet.getId(), ActionType.FORCED, 0,
-                    null, null, null, null, confirmationRequired));
-        }
-        return deploymentManagement.assignDistributionSets(deploymentRequests);
-    }
-
     @Test
     @Description("Duplicate Assignments are removed from a request when multiassignment is disabled, otherwise not")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
             @Expect(type = DistributionSetCreatedEvent.class, count = 1),
             @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
             @Expect(type = DistributionSetUpdatedEvent.class, count = 1), // implicit lock
             @Expect(type = SoftwareModuleUpdatedEvent.class, count = 3), // implicit lock
             @Expect(type = TargetAssignDistributionSetEvent.class, count = 1),
-            @Expect(type = ActionCreatedEvent.class, count = 2), @Expect(type = TargetUpdatedEvent.class, count = 2),
+            @Expect(type = ActionCreatedEvent.class, count = 2), 
+            @Expect(type = TargetUpdatedEvent.class, count = 2),
             @Expect(type = MultiActionAssignEvent.class, count = 1),
             @Expect(type = TenantConfigurationCreatedEvent.class, count = 1) })
     void duplicateAssignmentsInRequestAreRemovedIfMultiassignmentEnabled() {
@@ -939,13 +941,10 @@ class DeploymentManagementTest extends AbstractJpaIntegrationTest {
                 .isEqualTo(1);
     }
 
-    private int getResultingActionCount(final List<DistributionSetAssignmentResult> results) {
-        return results.stream().map(DistributionSetAssignmentResult::getTotal).reduce(0, Integer::sum);
-    }
-
     @Test
     @Description("An assignment request is not accepted if it would lead to a target exceeding the max actions per target quota.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
             @Expect(type = DistributionSetCreatedEvent.class, count = 21), // max actions per target are 20 for test
             @Expect(type = SoftwareModuleCreatedEvent.class, count = 3 * 21),
             @Expect(type = TargetAssignDistributionSetEvent.class, count = 0),
@@ -979,33 +978,32 @@ class DeploymentManagementTest extends AbstractJpaIntegrationTest {
         final Long dsId = testdataFactory.createDistributionSet().getId();
 
         final DeploymentRequest assignWithoutWeight = DeploymentManagement.deploymentRequest(targetId, dsId).build();
-        final DeploymentRequest assignWithWeight = DeploymentManagement.deploymentRequest(targetId, dsId).setWeight(567)
-                .build();
+        final DeploymentRequest assignWithWeight = DeploymentManagement.deploymentRequest(targetId, dsId).setWeight(567).build();
 
         enableMultiAssignments();
-        deploymentManagement.assignDistributionSets(Arrays.asList(assignWithoutWeight, assignWithWeight));
+        assertThat(deploymentManagement.assignDistributionSets(List.of(assignWithoutWeight, assignWithWeight))).isNotNull();
     }
 
     @Test
-    @Description("An assignment request containing a weight causes an error when multi assignment in disabled.")
+    @Description("An assignment request containing a weight don't causes an error when multi assignment in disabled.")
     void weightAllowedWhenMultiAssignmentModeNotEnabled() {
         final String targetId = testdataFactory.createTarget().getControllerId();
         final Long dsId = testdataFactory.createDistributionSet().getId();
 
-        final DeploymentRequest assignWithoutWeight = DeploymentManagement.deploymentRequest(targetId, dsId)
-                .setWeight(456).build();
-
-        deploymentManagement.assignDistributionSets(Collections.singletonList(assignWithoutWeight));
+        final DeploymentRequest assignWithoutWeight = DeploymentManagement.deploymentRequest(targetId, dsId).setWeight(456).build();
+        assertThat(deploymentManagement.assignDistributionSets(Collections.singletonList(assignWithoutWeight))).isNotNull().size().isEqualTo(1);
     }
 
     @Test
     @Description("Weights are validated and contained in the resulting Action.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 1),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 1),
             @Expect(type = DistributionSetCreatedEvent.class, count = 1),
             @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
             @Expect(type = DistributionSetUpdatedEvent.class, count = 1), // implicit lock
             @Expect(type = SoftwareModuleUpdatedEvent.class, count = 3), // implicit lock
-            @Expect(type = ActionCreatedEvent.class, count = 2), @Expect(type = TargetUpdatedEvent.class, count = 2),
+            @Expect(type = ActionCreatedEvent.class, count = 2), 
+            @Expect(type = TargetUpdatedEvent.class, count = 2),
             @Expect(type = MultiActionAssignEvent.class, count = 2),
             @Expect(type = TenantConfigurationCreatedEvent.class, count = 1) })
     void weightValidatedAndSaved() {
@@ -1036,16 +1034,17 @@ class DeploymentManagementTest extends AbstractJpaIntegrationTest {
      * test a simple deployment by calling the
      * {@link TargetRepository#assignDistributionSet(DistributionSet, Iterable)} and
      * checking the active action and the action history of the targets.
-     *
      */
     @Test
     @Description("Simple deployment or distribution set to target assignment test.")
-    @ExpectEvents({ @Expect(type = TargetAssignDistributionSetEvent.class, count = 1),
+    @ExpectEvents({
+            @Expect(type = TargetAssignDistributionSetEvent.class, count = 1),
             @Expect(type = DistributionSetCreatedEvent.class, count = 1),
             @Expect(type = SoftwareModuleCreatedEvent.class, count = 3),
             @Expect(type = DistributionSetUpdatedEvent.class, count = 1), // implicit lock
             @Expect(type = SoftwareModuleUpdatedEvent.class, count = 3), // implicit lock
-            @Expect(type = TargetCreatedEvent.class, count = 30), @Expect(type = ActionCreatedEvent.class, count = 20),
+            @Expect(type = TargetCreatedEvent.class, count = 30), 
+            @Expect(type = ActionCreatedEvent.class, count = 20),
             @Expect(type = TargetUpdatedEvent.class, count = 20) })
     void assignDistributionSet2Targets() {
 
@@ -1099,12 +1098,14 @@ class DeploymentManagementTest extends AbstractJpaIntegrationTest {
 
     @Test
     @Description("Test that it is not possible to assign a distribution set that is not complete.")
-    @ExpectEvents({ @Expect(type = TargetAssignDistributionSetEvent.class, count = 1),
+    @ExpectEvents({
+            @Expect(type = TargetAssignDistributionSetEvent.class, count = 1),
             @Expect(type = DistributionSetCreatedEvent.class, count = 1),
             @Expect(type = SoftwareModuleCreatedEvent.class, count = 2),
             @Expect(type = DistributionSetUpdatedEvent.class, count = 2), // implicit lock
             @Expect(type = SoftwareModuleUpdatedEvent.class, count = 2), // implicit lock
-            @Expect(type = TargetCreatedEvent.class, count = 10), @Expect(type = ActionCreatedEvent.class, count = 10),
+            @Expect(type = TargetCreatedEvent.class, count = 10), 
+            @Expect(type = ActionCreatedEvent.class, count = 10),
             @Expect(type = TargetUpdatedEvent.class, count = 10) })
     void failDistributionSetAssigmentThatIsNotComplete() throws InterruptedException {
         final List<Target> targets = testdataFactory.createTargets(10);
@@ -1129,7 +1130,8 @@ class DeploymentManagementTest extends AbstractJpaIntegrationTest {
     @Test
     @Description("Multiple deployments or distribution set to target assignment test. Expected behaviour is that a new deployment "
             + "overides unfinished old one which are canceled as part of the operation.")
-    @ExpectEvents({ @Expect(type = TargetCreatedEvent.class, count = 5 + 4),
+    @ExpectEvents({
+            @Expect(type = TargetCreatedEvent.class, count = 5 + 4),
             @Expect(type = TargetUpdatedEvent.class, count = 3 * 4),
             @Expect(type = ActionCreatedEvent.class, count = 3 * 4),
             @Expect(type = ActionUpdatedEvent.class, count = 4 * 2),
@@ -1196,7 +1198,7 @@ class DeploymentManagementTest extends AbstractJpaIntegrationTest {
             + "from target/controller. Expected behaviour is that in case of OK finished update the target will go to "
             + "IN_SYNC status and installed DS is set to the assigned DS entry.")
     void assignDistributionSetAndAddFinishedActionStatus() {
-        final PageRequest pageRequest = PageRequest.of(0, 100, Direction.ASC, ActionStatusFields.ID.getFieldName());
+        final PageRequest pageRequest = PageRequest.of(0, 100, Direction.ASC, ActionStatusFields.ID.getJpaEntityFieldName());
 
         final DeploymentResult deployResWithDsA = prepareComplexRepo("undep-A-T", 2, "dep-A-T", 4, 1, "dsA");
         final DeploymentResult deployResWithDsB = prepareComplexRepo("undep-B-T", 3, "dep-B-T", 5, 1, "dsB");
@@ -1322,7 +1324,7 @@ class DeploymentManagementTest extends AbstractJpaIntegrationTest {
         assertThat(allFoundDS.size()).as("no ds should be founded").isZero();
 
         assertThat(distributionSetRepository.findAll(SpecificationsBuilder.combineWithAnd(Arrays
-                .asList(DistributionSetSpecification.isDeleted(true), DistributionSetSpecification.isCompleted(true))),
+                        .asList(DistributionSetSpecification.isDeleted(true), DistributionSetSpecification.isCompleted(true))),
                 PAGE).getContent()).as("wrong size of founded ds").hasSize(noOfDistributionSets);
 
         for (final DistributionSet ds : deploymentResult.getDistributionSets()) {
@@ -1338,7 +1340,7 @@ class DeploymentManagementTest extends AbstractJpaIntegrationTest {
         allFoundDS = distributionSetManagement.findByCompleted(pageRequest, true).getContent();
         assertThat(allFoundDS.size()).as("no ds should be founded").isZero();
         assertThat(distributionSetRepository.findAll(SpecificationsBuilder.combineWithAnd(Arrays
-                .asList(DistributionSetSpecification.isDeleted(true), DistributionSetSpecification.isCompleted(true))),
+                        .asList(DistributionSetSpecification.isDeleted(true), DistributionSetSpecification.isCompleted(true))),
                 PAGE).getContent()).as("wrong size of founded ds").hasSize(noOfDistributionSets);
 
     }
@@ -1553,30 +1555,6 @@ class DeploymentManagementTest extends AbstractJpaIntegrationTest {
     }
 
     @Test
-    @Description("Tests that an exception is thrown when a target is assigned to an incomplete distribution set")
-    public void verifyAssignTargetsToIncompleteDistribution() {
-        final DistributionSet distributionSet = testdataFactory.createIncompleteDistributionSet();
-        final Target target = testdataFactory.createTarget();
-
-        assertThatExceptionOfType(IncompleteDistributionSetException.class)
-                .as("Incomplete distributionSet should throw an exception")
-                .isThrownBy(() -> assignDistributionSet(distributionSet, target));
-
-    }
-
-    @Test
-    @Description("Tests that an exception is thrown when a target is assigned to an invalidated distribution set")
-    public void verifyAssignTargetsToInvalidDistribution() {
-        final DistributionSet distributionSet = testdataFactory.createAndInvalidateDistributionSet();
-        final Target target = testdataFactory.createTarget();
-
-        assertThatExceptionOfType(InvalidDistributionSetException.class)
-                .as("Invalid distributionSet should throw an exception")
-                .isThrownBy(() -> assignDistributionSet(distributionSet, target));
-
-    }
-
-    @Test
     @Description("Verify that the DistributionSet assignments work for multiple targets of the same target type within the same request.")
     void verifyDSAssignmentForMultipleTargetsWithSameTargetType() {
         final DistributionSet ds = testdataFactory.createDistributionSet("test-ds");
@@ -1664,6 +1642,52 @@ class DeploymentManagementTest extends AbstractJpaIntegrationTest {
                 .isThrownBy(() -> deploymentManagement.assignDistributionSets(deploymentRequests));
     }
 
+    private JpaAction assignSet(final Target target, final DistributionSet ds) {
+        assignDistributionSet(ds.getId(), target.getControllerId());
+        implicitLock(ds);
+        assertThat(targetManagement.getByControllerID(target.getControllerId()).get().getUpdateStatus())
+                .as("wrong update status").isEqualTo(TargetUpdateStatus.PENDING);
+        assertThat(deploymentManagement.getAssignedDistributionSet(target.getControllerId())).as("wrong assigned ds")
+                .contains(ds);
+        final JpaAction action = actionRepository
+                .findAll(
+                        (root, query, cb) ->
+                                cb.and(
+                                        cb.equal(root.get(JpaAction_.target).get(JpaTarget_.id), target.getId()),
+                                        cb.equal(root.get(JpaAction_.distributionSet).get(JpaDistributionSet_.id), ds.getId())),
+                        PAGE).getContent().get(0);
+        assertThat(action).as("action should not be null").isNotNull();
+        return action;
+    }
+
+    private void assertDsExclusivelyAssignedToTargets(final List<Target> targets, final long dsId, final boolean active,
+            final Status status) {
+        final List<Action> assignment = findActionsByDistributionSet(PAGE, dsId).getContent();
+        final String currentUsername = tenantAware.getCurrentUsername();
+
+        assertThat(assignment).hasSize(10).allMatch(action -> action.isActive() == active)
+                .as("Is assigned to DS " + dsId).allMatch(action -> action.getDistributionSet().getId().equals(dsId))
+                .as("State is " + status).allMatch(action -> action.getStatus() == status)
+                .as("Initiated by " + currentUsername).allMatch(a -> a.getInitiatedBy().equals(currentUsername));
+        final long[] targetIds = targets.stream().mapToLong(Target::getId).toArray();
+        assertThat(targetIds).as("All targets represented in assignment").containsExactlyInAnyOrder(
+                assignment.stream().mapToLong(action -> action.getTarget().getId()).toArray());
+    }
+
+    private List<DistributionSetAssignmentResult> assignDistributionSetToTargets(final DistributionSet distributionSet,
+            final Iterable<String> targetIds, final boolean confirmationRequired) {
+        final List<DeploymentRequest> deploymentRequests = new ArrayList<>();
+        for (final String controllerId : targetIds) {
+            deploymentRequests.add(new DeploymentRequest(controllerId, distributionSet.getId(), ActionType.FORCED, 0,
+                    null, null, null, null, confirmationRequired));
+        }
+        return deploymentManagement.assignDistributionSets(deploymentRequests);
+    }
+
+    private int getResultingActionCount(final List<DistributionSetAssignmentResult> results) {
+        return results.stream().map(DistributionSetAssignmentResult::getTotal).reduce(0, Integer::sum);
+    }
+
     /**
      * Helper methods that creates 2 lists of targets and a list of distribution
      * sets.
@@ -1671,18 +1695,12 @@ class DeploymentManagementTest extends AbstractJpaIntegrationTest {
      * <b>All created distribution sets are assigned to all targets of the target
      * list deployedTargets.</b>
      *
-     * @param undeployedTargetPrefix
-     *            prefix to be used as target controller prefix
-     * @param noOfUndeployedTargets
-     *            number of targets which remain undeployed
-     * @param deployedTargetPrefix
-     *            prefix to be used as target controller prefix
-     * @param noOfDeployedTargets
-     *            number of targets to which the created distribution sets assigned
-     * @param noOfDistributionSets
-     *            number of distribution sets
-     * @param distributionSetPrefix
-     *            prefix for the created distribution sets
+     * @param undeployedTargetPrefix prefix to be used as target controller prefix
+     * @param noOfUndeployedTargets number of targets which remain undeployed
+     * @param deployedTargetPrefix prefix to be used as target controller prefix
+     * @param noOfDeployedTargets number of targets to which the created distribution sets assigned
+     * @param noOfDistributionSets number of distribution sets
+     * @param distributionSetPrefix prefix for the created distribution sets
      * @return the {@link DeploymentResult} containing all created targets, the
      *         distribution sets, the corresponding IDs for later evaluation in
      *         tests
@@ -1723,6 +1741,7 @@ class DeploymentManagementTest extends AbstractJpaIntegrationTest {
     }
 
     private static class DeploymentResult {
+
         final List<Long> deployedTargetIDs = new ArrayList<>();
         final List<Long> undeployedTargetIDs = new ArrayList<>();
         final List<Long> distributionSetIDs = new ArrayList<>();
