@@ -11,48 +11,85 @@ package org.eclipse.hawkbit.repository.jpa.management;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
+import java.util.Random;
 import java.util.stream.Collectors;
 
 import jakarta.validation.ConstraintViolationException;
 
+import io.qameta.allure.Description;
+import io.qameta.allure.Feature;
+import io.qameta.allure.Step;
+import io.qameta.allure.Story;
 import org.apache.commons.lang3.RandomStringUtils;
 import org.eclipse.hawkbit.repository.TargetTagManagement;
 import org.eclipse.hawkbit.repository.event.remote.entity.DistributionSetTagUpdatedEvent;
 import org.eclipse.hawkbit.repository.event.remote.entity.TargetCreatedEvent;
 import org.eclipse.hawkbit.repository.event.remote.entity.TargetTagUpdatedEvent;
 import org.eclipse.hawkbit.repository.exception.EntityAlreadyExistsException;
+import org.eclipse.hawkbit.repository.exception.EntityNotFoundException;
 import org.eclipse.hawkbit.repository.jpa.AbstractJpaIntegrationTest;
 import org.eclipse.hawkbit.repository.jpa.model.JpaTargetTag;
 import org.eclipse.hawkbit.repository.model.NamedEntity;
 import org.eclipse.hawkbit.repository.model.Tag;
 import org.eclipse.hawkbit.repository.model.Target;
 import org.eclipse.hawkbit.repository.model.TargetTag;
-import org.eclipse.hawkbit.repository.model.TargetTagAssignmentResult;
 import org.eclipse.hawkbit.repository.test.matcher.Expect;
 import org.eclipse.hawkbit.repository.test.matcher.ExpectEvents;
 import org.junit.jupiter.api.Test;
-
-import io.qameta.allure.Description;
-import io.qameta.allure.Feature;
-import io.qameta.allure.Step;
-import io.qameta.allure.Story;
+import org.springframework.data.domain.Pageable;
 
 /**
  * Test class for {@link TargetTagManagement}.
- *
  */
 @Feature("Component Tests - Repository")
 @Story("Target Tag Management")
 class TargetTagManagementTest extends AbstractJpaIntegrationTest {
 
+    private static final Random RND = new Random();
+
     @Test
-    @Description("Verifies that management get access reacts as specfied on calls for non existing entities by means "
-            + "of Optional not present.")
+    @Description("Verifies that tagging of set containing missing DS throws meaningful and correct exception.")
+    void failOnMissingDs() {
+        final Collection<String> group = testdataFactory.createTargets(5).stream()
+                .map(Target::getControllerId)
+                .collect(Collectors.toList());
+        final TargetTag tag = targetTagManagement.create(entityFactory.tag().create().name("tag1").description("tagdesc1"));
+
+        final List<String> missing = new ArrayList<>();
+        for (int i = 0; i < 5; i++) {
+            while (true) {
+                final String id = String.valueOf(Math.abs(RND.nextLong()));
+                if (!group.contains(id)) {
+                    missing.add(id);
+                    break;
+                }
+            }
+        }
+        Collections.sort(missing);
+        final Collection<String> withMissing = concat(group, missing);
+        assertThatThrownBy(() -> targetManagement.assignTag(withMissing, tag.getId()))
+                .matches(e -> {
+                    if (e instanceof EntityNotFoundException enfe) {
+                        if (enfe.getInfo().get(EntityNotFoundException.TYPE).equals(Target.class.getSimpleName())) {
+                            if (enfe.getInfo().get(EntityNotFoundException.ENTITY_ID) instanceof Collection entityId) {
+                                return entityId.stream().sorted().toList().equals(missing);
+                            }
+                        }
+                    }
+                    return false;
+                });
+    }
+
+    @Test
+    @Description("Verifies that management get access reacts as specfied on calls for non existing entities by means " +
+            "of Optional not present.")
     @ExpectEvents({ @Expect(type = TargetCreatedEvent.class) })
     void nonExistingEntityAccessReturnsNotPresent() {
         assertThat(targetTagManagement.getByName(NOT_EXIST_ID)).isNotPresent();
@@ -60,151 +97,59 @@ class TargetTagManagementTest extends AbstractJpaIntegrationTest {
     }
 
     @Test
-    @Description("Verifies that management queries react as specfied on calls for non existing entities "
-            + " by means of throwing EntityNotFoundException.")
-    @ExpectEvents({ @Expect(type = DistributionSetTagUpdatedEvent.class), @Expect(type = TargetTagUpdatedEvent.class) })
+    @Description("Verifies that management queries react as specfied on calls for non existing entities " +
+            " by means of throwing EntityNotFoundException.")
+    @ExpectEvents({
+            @Expect(type = DistributionSetTagUpdatedEvent.class), 
+            @Expect(type = TargetTagUpdatedEvent.class) })
     void entityQueriesReferringToNotExistingEntitiesThrowsException() {
         verifyThrownExceptionBy(() -> targetTagManagement.delete(NOT_EXIST_ID), "TargetTag");
-
-        verifyThrownExceptionBy(() -> targetTagManagement.update(entityFactory.tag().update(NOT_EXIST_IDL)),
-                "TargetTag");
-
+        verifyThrownExceptionBy(() -> targetTagManagement.update(entityFactory.tag().update(NOT_EXIST_IDL)), "TargetTag");
         verifyThrownExceptionBy(() -> getTargetTags(NOT_EXIST_ID), "Target");
     }
 
     @Test
     @Description("Verify that a tag with with invalid properties cannot be created or updated")
     void createAndUpdateTagWithInvalidFields() {
-        final TargetTag tag = targetTagManagement
-                .create(entityFactory.tag().create().name("tag1").description("tagdesc1"));
-
+        final TargetTag tag = targetTagManagement.create(entityFactory.tag().create().name("tag1").description("tagdesc1"));
         createAndUpdateTagWithInvalidDescription(tag);
         createAndUpdateTagWithInvalidColour(tag);
         createAndUpdateTagWithInvalidName(tag);
     }
 
-    @Step
-    private void createAndUpdateTagWithInvalidDescription(final Tag tag) {
-
-        assertThatExceptionOfType(ConstraintViolationException.class)
-                .as("tag with too long description should not be created")
-                .isThrownBy(() -> targetTagManagement.create(
-                        entityFactory.tag().create().name("a").description(RandomStringUtils.randomAlphanumeric(513))));
-
-        assertThatExceptionOfType(ConstraintViolationException.class)
-                .as("tag with invalid description should not be created").isThrownBy(() -> targetTagManagement
-                        .create(entityFactory.tag().create().name("a").description(INVALID_TEXT_HTML)));
-
-        assertThatExceptionOfType(ConstraintViolationException.class)
-                .as("tag with too long description should not be updated")
-                .isThrownBy(() -> targetTagManagement.update(
-                        entityFactory.tag().update(tag.getId())
-                                .description(RandomStringUtils.randomAlphanumeric(513))));
-
-        assertThatExceptionOfType(ConstraintViolationException.class)
-                .as("tag with invalid description should not be updated")
-                .isThrownBy(() -> targetTagManagement
-                        .update(entityFactory.tag().update(tag.getId()).description(INVALID_TEXT_HTML)));
-    }
-
-    @Step
-    private void createAndUpdateTagWithInvalidColour(final Tag tag) {
-
-        assertThatExceptionOfType(ConstraintViolationException.class)
-                .as("tag with too long colour should not be created")
-                .isThrownBy(() -> targetTagManagement.create(
-                        entityFactory.tag().create().name("a").colour(RandomStringUtils.randomAlphanumeric(17))));
-
-        assertThatExceptionOfType(ConstraintViolationException.class)
-                .as("tag with invalid colour should not be created").isThrownBy(() -> targetTagManagement
-                        .create(entityFactory.tag().create().name("a").colour(INVALID_TEXT_HTML)));
-
-        assertThatExceptionOfType(ConstraintViolationException.class)
-                .as("tag with too long colour should not be updated")
-                .isThrownBy(() -> targetTagManagement.update(
-                        entityFactory.tag().update(tag.getId()).colour(RandomStringUtils.randomAlphanumeric(17))));
-
-        assertThatExceptionOfType(ConstraintViolationException.class)
-                .as("tag with invalid colour should not be updated").isThrownBy(() -> targetTagManagement
-                        .update(entityFactory.tag().update(tag.getId()).colour(INVALID_TEXT_HTML)));
-    }
-
-    @Step
-    private void createAndUpdateTagWithInvalidName(final Tag tag) {
-
-        assertThatExceptionOfType(ConstraintViolationException.class)
-                .as("tag with too long name should not be created")
-                .isThrownBy(() -> targetTagManagement
-                        .create(entityFactory.tag().create().name(RandomStringUtils.randomAlphanumeric(
-                                NamedEntity.NAME_MAX_SIZE + 1))));
-
-        assertThatExceptionOfType(ConstraintViolationException.class)
-                .as("tag with invalidname should not be created")
-                .isThrownBy(() -> targetTagManagement.create(entityFactory.tag().create().name(INVALID_TEXT_HTML)));
-
-        assertThatExceptionOfType(ConstraintViolationException.class)
-                .as("tag with too long name should not be updated")
-                .isThrownBy(() -> targetTagManagement
-                        .update(entityFactory.tag().update(tag.getId()).name(RandomStringUtils.randomAlphanumeric(
-                                NamedEntity.NAME_MAX_SIZE + 1))));
-
-        assertThatExceptionOfType(ConstraintViolationException.class).as("tag with invalid name should not be updated")
-                .isThrownBy(() -> targetTagManagement
-                        .update(entityFactory.tag().update(tag.getId()).name(INVALID_TEXT_HTML)));
-
-        assertThatExceptionOfType(ConstraintViolationException.class)
-                .as("tag with too short name should not be updated")
-                .isThrownBy(() -> targetTagManagement.update(entityFactory.tag().update(tag.getId()).name("")));
-
-    }
-
     @Test
-    @Description("Verifies the toogle mechanism by means on assigning tag if at least on target in the list does not have"
-            + "the tag yet. Unassign if all of them have the tag already.")
+    @Description("Verifies assign/unassign.")
     void assignAndUnassignTargetTags() {
         final List<Target> groupA = testdataFactory.createTargets(20);
         final List<Target> groupB = testdataFactory.createTargets(20, "groupb", "groupb");
 
-        final TargetTag tag = targetTagManagement
-                .create(entityFactory.tag().create().name("tag1").description("tagdesc1"));
+        final TargetTag tag = targetTagManagement.create(entityFactory.tag().create().name("tag1").description("tagdesc1"));
 
         // toggle A only -> A is now assigned
-        TargetTagAssignmentResult result = toggleTagAssignment(groupA, tag);
-        assertThat(result.getAlreadyAssigned()).isZero();
-        assertThat(result.getAssigned()).isEqualTo(20);
-        assertThat(result.getAssignedEntity()).containsAll(targetManagement
-                .getByControllerID(groupA.stream().map(Target::getControllerId).collect(Collectors.toList())));
-        assertThat(result.getUnassigned()).isZero();
-        assertThat(result.getUnassignedEntity()).isEmpty();
-        assertThat(result.getTargetTag()).isEqualTo(tag);
+        List<Target> result = assignTag(groupA, tag);
+        assertThat(result).size().isEqualTo(20);
+        assertThat(result).containsAll(
+                targetManagement.getByControllerID(groupA.stream().map(Target::getControllerId).collect(Collectors.toList())));
+        assertThat(targetManagement.findByTag(Pageable.unpaged(), tag.getId()).getContent().stream().map(Target::getControllerId).sorted()
+                .toList())
+                .isEqualTo(groupA.stream().map(Target::getControllerId).sorted().toList());
 
         // toggle A+B -> A is still assigned and B is assigned as well
-        result = toggleTagAssignment(concat(groupA, groupB), tag);
-        assertThat(result.getAlreadyAssigned()).isEqualTo(20);
-        assertThat(result.getAssigned()).isEqualTo(20);
-        assertThat(result.getAssignedEntity()).containsAll(targetManagement
-                .getByControllerID(groupB.stream().map(Target::getControllerId).collect(Collectors.toList())));
-        assertThat(result.getUnassigned()).isZero();
-        assertThat(result.getUnassignedEntity()).isEmpty();
-        assertThat(result.getTargetTag()).isEqualTo(tag);
+        final Collection<Target> groupAB = concat(groupA, groupB);
+        result = assignTag(groupAB, tag);
+        assertThat(result).size().isEqualTo(40);
+        assertThat(result).containsAll(
+                targetManagement.getByControllerID(groupAB.stream().map(Target::getControllerId).collect(Collectors.toList())));
+        assertThat(targetManagement.findByTag(Pageable.unpaged(), tag.getId()).getContent().stream().map(Target::getControllerId).sorted()
+                .toList())
+                .isEqualTo(groupAB.stream().map(Target::getControllerId).sorted().toList());
 
         // toggle A+B -> both unassigned
-        result = toggleTagAssignment(concat(groupA, groupB), tag);
-        assertThat(result.getAlreadyAssigned()).isZero();
-        assertThat(result.getAssigned()).isZero();
-        assertThat(result.getAssignedEntity()).isEmpty();
-        assertThat(result.getUnassigned()).isEqualTo(40);
-        assertThat(result.getUnassignedEntity()).containsAll(targetManagement.getByControllerID(
-                concat(groupB, groupA).stream().map(Target::getControllerId).collect(Collectors.toList())));
-        assertThat(result.getTargetTag()).isEqualTo(tag);
-
-    }
-
-    @SafeVarargs
-    private <T> Collection<T> concat(final Collection<T>... targets) {
-        final List<T> result = new ArrayList<>();
-        Arrays.asList(targets).forEach(result::addAll);
-        return result;
+        result = unassignTag(groupAB, tag);
+        assertThat(result).size().isEqualTo(40);
+        assertThat(result).containsAll(
+                targetManagement.getByControllerID(groupAB.stream().map(Target::getControllerId).collect(Collectors.toList())));
+        assertThat(targetManagement.findByTag(Pageable.unpaged(), tag.getId()).getContent()).isEmpty();
     }
 
     @Test
@@ -290,11 +235,79 @@ class TargetTagManagementTest extends AbstractJpaIntegrationTest {
                 .isThrownBy(() -> targetTagManagement.update(entityFactory.tag().update(tag.getId()).name("A")));
     }
 
+    @Step
+    private void createAndUpdateTagWithInvalidDescription(final Tag tag) {
+        assertThatExceptionOfType(ConstraintViolationException.class)
+                .as("tag with too long description should not be created")
+                .isThrownBy(() -> targetTagManagement.create(
+                        entityFactory.tag().create().name("a").description(RandomStringUtils.randomAlphanumeric(513))));
+        assertThatExceptionOfType(ConstraintViolationException.class)
+                .as("tag with invalid description should not be created").isThrownBy(() -> targetTagManagement
+                        .create(entityFactory.tag().create().name("a").description(INVALID_TEXT_HTML)));
+        assertThatExceptionOfType(ConstraintViolationException.class)
+                .as("tag with too long description should not be updated")
+                .isThrownBy(() -> targetTagManagement.update(
+                        entityFactory.tag().update(tag.getId())
+                                .description(RandomStringUtils.randomAlphanumeric(513))));
+        assertThatExceptionOfType(ConstraintViolationException.class)
+                .as("tag with invalid description should not be updated")
+                .isThrownBy(() -> targetTagManagement
+                        .update(entityFactory.tag().update(tag.getId()).description(INVALID_TEXT_HTML)));
+    }
+
+    @Step
+    private void createAndUpdateTagWithInvalidColour(final Tag tag) {
+        assertThatExceptionOfType(ConstraintViolationException.class)
+                .as("tag with too long colour should not be created")
+                .isThrownBy(() -> targetTagManagement.create(
+                        entityFactory.tag().create().name("a").colour(RandomStringUtils.randomAlphanumeric(17))));
+        assertThatExceptionOfType(ConstraintViolationException.class)
+                .as("tag with invalid colour should not be created").isThrownBy(() -> targetTagManagement
+                        .create(entityFactory.tag().create().name("a").colour(INVALID_TEXT_HTML)));
+        assertThatExceptionOfType(ConstraintViolationException.class)
+                .as("tag with too long colour should not be updated")
+                .isThrownBy(() -> targetTagManagement.update(
+                        entityFactory.tag().update(tag.getId()).colour(RandomStringUtils.randomAlphanumeric(17))));
+        assertThatExceptionOfType(ConstraintViolationException.class)
+                .as("tag with invalid colour should not be updated").isThrownBy(() -> targetTagManagement
+                        .update(entityFactory.tag().update(tag.getId()).colour(INVALID_TEXT_HTML)));
+    }
+
+    @Step
+    private void createAndUpdateTagWithInvalidName(final Tag tag) {
+        assertThatExceptionOfType(ConstraintViolationException.class)
+                .as("tag with too long name should not be created")
+                .isThrownBy(() -> targetTagManagement
+                        .create(entityFactory.tag().create().name(RandomStringUtils.randomAlphanumeric(
+                                NamedEntity.NAME_MAX_SIZE + 1))));
+        assertThatExceptionOfType(ConstraintViolationException.class)
+                .as("tag with invalidname should not be created")
+                .isThrownBy(() -> targetTagManagement.create(entityFactory.tag().create().name(INVALID_TEXT_HTML)));
+        assertThatExceptionOfType(ConstraintViolationException.class)
+                .as("tag with too long name should not be updated")
+                .isThrownBy(() -> targetTagManagement
+                        .update(entityFactory.tag().update(tag.getId()).name(RandomStringUtils.randomAlphanumeric(
+                                NamedEntity.NAME_MAX_SIZE + 1))));
+        assertThatExceptionOfType(ConstraintViolationException.class).as("tag with invalid name should not be updated")
+                .isThrownBy(() -> targetTagManagement
+                        .update(entityFactory.tag().update(tag.getId()).name(INVALID_TEXT_HTML)));
+        assertThatExceptionOfType(ConstraintViolationException.class)
+                .as("tag with too short name should not be updated")
+                .isThrownBy(() -> targetTagManagement.update(entityFactory.tag().update(tag.getId()).name("")));
+    }
+
+    @SafeVarargs
+    private <T> Collection<T> concat(final Collection<T>... targets) {
+        final List<T> result = new ArrayList<>();
+        Arrays.asList(targets).forEach(result::addAll);
+        return result;
+    }
+
     private List<JpaTargetTag> createTargetsWithTags() {
         final List<Target> targets = testdataFactory.createTargets(20);
         final Iterable<TargetTag> tags = testdataFactory.createTargetTags(20, "");
 
-        tags.forEach(tag -> toggleTagAssignment(targets, tag));
+        tags.forEach(tag -> assignTag(targets, tag));
 
         return targetTagRepository.findAll();
     }
